# ferrum

./: .clippy.toml  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  NOTICE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: deploy-fly.yml  docker-build.yml  publish-libs.yml  test.yml
apps/admin-ui/: .dockerignore  .env.example  Dockerfile  index.html  next.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
apps/admin-ui/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/admin-ui/components/: ApiDisplay.tsx  AppSidebar.tsx  AuditEventDisplay.tsx  AuthGuard.tsx  BundleTableView.tsx  CapabilityStatementDisplay.tsx  ColumnHeader.tsx  Combobox.tsx  ConditionalLayout.tsx  ConnectionGuard.tsx  ConnectionIndicator.tsx  CustomChartTooltip.tsx  CustomTabs.tsx  DashboardDisplay.tsx  Error.tsx  FhirInput.tsx  FhirSearchInput.tsx  JobsDisplay.tsx  JsonToolbar.tsx  JsonViewer.tsx  PackageDetailDisplay.tsx  PackagesDisplay.tsx  Providers.tsx  ResourceTableView.tsx  ResourcesDisplay.tsx  ResultTabs.tsx  SearchInput.tsx  SearchParams.tsx  StatusBadge.tsx  ThemeToggle.tsx
apps/admin-ui/lib/: auth.ts  config.ts  utils.ts
apps/admin-ui/server/: proxy.ts
apps/admin-ui/src/: app.css  app.tsx  main.tsx
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  fly.toml
apps/server/migrations/: .gitkeep  (+2 more)
docker/: compose.hetzner.yaml  compose.local.yaml  config.yaml
docs/: docs.json
docs/api-reference/: content-negotiation.mdx  introduction.mdx
docs/deployment/: backup-restore.mdx  bare-metal.mdx  kubernetes.mdx  logging.mdx  monitoring.mdx  scaling.mdx
docs/getting-started/: configuration.mdx  fhir-primer.mdx  index.mdx  quickstart.mdx
docs/server/: architecture.mdx  batch-and-transactions.mdx  compartments.mdx  crud-operations.mdx  operations.mdx  packages.mdx  search.mdx  transactions.mdx  versioning-history.mdx
docs/ui/: customization.mdx  job-queue.mdx  monitoring.mdx  overview.mdx  resource-browser.mdx  resource-editor.mdx
libs/fhir-client-ts/: README.md  package-lock.json  package.json  tsconfig.json
libs/fhir-codegen/: Cargo.toml
libs/fhir-codegen/src/: lib.rs  utils.rs
libs/fhir-codegen/src/generators/: mod.rs
libs/fhir-codegen/src/generators/rust/: mod.rs  types.rs
libs/fhir-codegen/src/ir/: mod.rs
libs/fhir-codegen/src/parser/: mod.rs
libs/fhir-context/: Cargo.toml
libs/fhir-context/src/: context.rs  error.rs  lib.rs  loader.rs  version.rs
libs/fhir-format/: Cargo.toml  README.md
libs/fhir-format/src/: lib.rs
libs/fhir-format/tests/: conversion_tests.rs
libs/fhir-format/tests/data/: dr-1.json  dr-1.xml  patient-1.json  patient-1.xml  patient-2.json  patient-2.xml  patient-3.json  patient-3.xml
libs/fhir-models/: Cargo.toml
libs/fhir-models/src/: lib.rs
libs/fhir-models/src/common/: bundle.rs  code_system.rs  complex.rs  element_definition.rs  error.rs  mod.rs  structure_definition.rs  value_set.rs
libs/fhir-models/tests/: run_tests.rs
libs/fhir-package/: Cargo.toml
libs/fhir-package/src/: lib.rs
libs/fhir-registry-client/: Cargo.toml  README.md
libs/fhir-registry-client/src/: async_client.rs  async_simplifier.rs  cache.rs  error.rs  lib.rs  models.rs  version_resolver.rs
libs/fhir-snapshot/: Cargo.toml  README.md
libs/fhir-snapshot/src/: error.rs  expanded_context.rs  expander.rs  generator.rs  inheritance.rs  lib.rs  merge.rs  normalization.rs  slicing.rs  snapshot_generation.rs  validation.rs
libs/fhir-snapshot/test_output/: patient_expanded.json  patient_expansion_stats.json
libs/fhir-snapshot/tests/: test_expansion.rs  test_fhir_test_cases.rs  test_generator.rs  test_oncotree_slice.rs  test_patient_expansion.rs  test_real_world_snapshot.rs  test_structure_definition.rs
libs/fhir-snapshot/tests/data/: primary-diagnosis-base.json  primary-diagnosis-diff.json  primary-diagnosis-snap.json
libs/fhir-snapshot/tests/test_support/: mod.rs
libs/fhir-validator/: Cargo.toml  README.md
libs/fhir-validator/examples/: architecture.rs  config-ingestion.yaml  config-publication.yaml  config-server.yaml  multi_profile_validation.rs  schema_validation.rs  usage.rs
libs/fhir-validator/src/: error.rs  lib.rs  plan.rs  validator.rs
libs/fhir-validator/src/steps/: README.md  constraints.rs  mod.rs  profiles.rs  schema.rs  slicing.rs
libs/fhir-validator/tests/: official_suite.rs
libs/fhir-validator/tests/test_support/: mod.rs
libs/fhirpath/: Cargo.toml  README.md
libs/fhirpath/benches/: benchmark.rs
libs/fhirpath/grammar/: fhirpath.g4
libs/fhirpath/src/: analyzer.rs  ast.rs  codegen.rs  context.rs  conversion.rs  engine.rs  error.rs  functions.rs  hir.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  temporal_parse.rs  token.rs  typecheck.rs  types.rs  value.rs  variables.rs  visualize.rs  vm.rs
libs/fhirpath/src/vm/: functions.rs  operations.rs
libs/fhirpath/src/vm/functions/: aggregate.rs  boolean.rs  combining.rs  conversion.rs  existence.rs  filtering.rs  helpers.rs  math.rs  navigation.rs  string.rs  subsetting.rs  temporal.rs  type_helpers.rs  type_op.rs  utility.rs
libs/fhirpath/tests/: fuzzing_test.rs  integration_tests.rs  property_test.rs  test_boolean_issue.rs  test_hl7_suite.rs  test_specific_failing.rs  test_type_checking.rs  test_xml_support.rs  tmp.json  unit_lexer.rs  unit_parser.rs  unit_vm.rs
libs/fhirpath/tests/examples/: condition-example-sepsis.json  observation-example.json  patient-example-name.json  patient-example-period.json
libs/fhirpath/tests/hl7/: mod.rs  test_hl7_suite.rs
libs/fhirpath/tests/integration/: external_constants.rs  mod.rs  test_as.rs  test_date_eq.rs  test_function_parsing.rs  test_integration.rs
libs/fhirpath/tests/test_support/: mod.rs
libs/ucum/: Cargo.toml
libs/ucum/src/: ast.rs  db.rs  error.rs  fhir.rs  lib.rs  parser.rs  quantity.rs  unit.rs
libs/ucum/tests/: basic.rs
quickstart/: .env.example  README.md  compose.yaml  config.yaml  ferrum.yaml  install.sh
scripts/: release-dist.sh  test-docker-builds.sh
(+323 files in other folders)
