[package]
name = "zunder-cli"
version = { workspace = true }
edition = { workspace = true }
description = "CLI."
publish = false

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
zunder-context.workspace = true
zunder-models.workspace = true
zunder-snapshot.workspace = true
zunder-fhirpath.workspace = true
zunder-codegen.workspace = true
zunder-registry-client.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
