[package]
name = "ferrum-cli"
version = { workspace = true }
edition = { workspace = true }
description = "CLI."
publish = false

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
ferrum-context.workspace = true
ferrum-models.workspace = true
ferrum-snapshot.workspace = true
ferrum-fhirpath.workspace = true
ferrum-codegen.workspace = true
ferrum-registry-client.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
