[package]
name = "zunder-context"
version = { workspace = true }
edition = { workspace = true }
description = "FHIR Context."
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
lru = { workspace = true }
zunder-registry-client = { workspace = true, optional = true }
zunder-package.workspace = true
zunder-models.workspace = true
thiserror = { workspace = true }
anyhow = { workspace = true }
semver = { workspace = true }
chrono = { workspace = true }

[features]
default = ["registry-loader"]
registry-loader = ["dep:zunder-registry-client"]
