[package]
name = "ferrum-validator"
version = { workspace = true }
edition = { workspace = true }
description = "FHIR resource validation engine."
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
ferrum-context.workspace = true
ferrum-fhirpath.workspace = true
ferrum-models.workspace = true
ferrum-snapshot.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
libtest-mimic = "0.8.1"

[[test]]
name = "official_suite"
harness = false
