[package]
name = "ferrum-fhirpath"
version = { workspace = true }
edition = { workspace = true }
description = "FHIRPath engine."
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Value representation
smallvec = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }

# Type system
phf = { workspace = true }

# Performance
lru = { workspace = true }

# Regex support (optional)
regex = { workspace = true, optional = true }

# Base64 encoding support (optional)
base64 = { version = "0.22", optional = true }
hex = { workspace = true, optional = true }
html-escape = { workspace = true, optional = true }
urlencoding = { workspace = true }

# FHIR context for runtime type resolution
ferrum-context.workspace = true
ferrum-ucum.workspace = true

# XML support (optional)
ferrum-format = { workspace = true, optional = true }

[features]
default = ["regex", "base64", "hex", "html-escape"]
xml-support = ["ferrum-format"]

[dev-dependencies]
criterion = "0.5"
quickcheck = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
name = "benchmark"
harness = false
