[package]
name = "ferrum-ucum"
version = { workspace = true }
edition = { workspace = true }
description = "UCUM (Unified Code for Units of Measure) implementation."
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
rust_decimal = { workspace = true }

once_cell = "1.20"
quick-xml = "0.31"

num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"

serde = { workspace = true, optional = true }

[features]
default = ["ucum-core", "ucum-fhir"]
ucum-core = []
ucum-fhir = []
serde = ["dep:serde"]
